# platzky-redirections

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
platzky_redirections/: __init__.py  entrypoint.py  plugin.py
tests/: redirection_tests.py  test_redirections.py
