[tool.poetry]
name = "platzky_redirections"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.3"
gql = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
platzky = "^0.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
